--- a/src/markdown-pages/about.mdx
+++ b/src/markdown-pages/about.mdx
@@ -2,8 +2,6 @@ import Highlight2 from '../components/Highlight2'
 
 ### bio
 
-I'm a full-stack software engineer living in Portland, OR.
+I'm a full-stack software engineer in Portland, OR.
 
-<Highlight2 />
-
-![](../images/icon.png)
+![](icon.png)
