images with mdx

--- a/src/markdown-pages/about.mdx
+++ b/src/markdown-pages/about.mdx
@@ -4,4 +4,4 @@ import Highlight2 from '../components/Highlight2'
 
 I'm a full-stack software engineer in Portland, OR.
 
-![](icon.png)
+![](./images/icon.png)
