added mdx wrapper component

--- a/src/markdown-pages/about.mdx
+++ b/src/markdown-pages/about.mdx
@@ -1,7 +1,4 @@
-import Highlight2 from '../components/Highlight2'
+![](./images/headshot.png)
 
 ### bio
-
-I'm a full-stack software engineer in Portland, OR.
-
-![](./images/icon.png)
+I'm a full-stack software engineer in Portland, OR. I would at a lot more here of course, but I can't think of anything to write right now.I would at a lot more here of course, but I can't think of anything to write right now.I would at a lot more here of course, but I can't think of anything to write right now.I would at a lot more here of course, but I can't think of anything to write right now.
