main content style

--- a/src/markdown-pages/about.mdx
+++ b/src/markdown-pages/about.mdx
@@ -1,4 +1,13 @@
+import { Link } from 'gatsby'
+
 ![](./images/headshot.png)
 
 ### bio
-I'm a full-stack software engineer in Portland, OR. I would at a lot more here of course, but I can't think of anything to write right now.I would at a lot more here of course, but I can't think of anything to write right now.I would at a lot more here of course, but I can't think of anything to write right now.I would at a lot more here of course, but I can't think of anything to write right now.
+I'm a full-stack software engineer who's profficient in with JavaScript, Python, React.js, Redux, Node.js, <Link to='/technologies'>and more</Link>. Ever since I taught myself SQL at my first job, I knew I had to keep finding harder problems to solve through code.
+
+I'm searching for a diverse team to lend my skills to and learn new things from. I have a particular eye for design and a knack for identifying patterns and solving them systematically. Contact me.
+
+### history
+- I graduated from App Academy (an intensive 1000+ hour bootcamp) in April 2021
+- I earned my MBA from the University of Redlands in 2019 and my BBA Walla Walla University in 2015
+- I have experience with leadership, project management, and
