added to the about page

--- a/src/markdown-pages/about.mdx
+++ b/src/markdown-pages/about.mdx
@@ -3,11 +3,13 @@ import { Link } from 'gatsby'
 ![](./images/headshot.png)
 
 ### bio
-I'm a full-stack software engineer who's profficient in with JavaScript, Python, React.js, Redux, Node.js, <Link to='/technologies'>and more</Link>. Ever since I taught myself SQL at my first job, I knew I had to keep finding harder problems to solve through code.
+I'm a full-stack software engineer who's profficient with JavaScript, Python, React.js, Redux, <Link to='/technologies'>and more</Link>. Ever since I taught myself SQL at my first job, I knew I had to keep finding harder problems to solve through code.
 
-I'm searching for a diverse team to lend my skills to and learn new things from. I have a particular eye for design and a knack for identifying patterns and solving them systematically. Contact me.
+### background
+- Graduated from [App Academy](https://www.appacademy.io/) (an intensive 1000+ hour bootcamp) in April 2021
+- Have experience in leadership, project management, and data manipulation
+- Hold an MBA from the University of Redlands and a BBA from Walla Walla University
+- <Link to='/resume'>See more</Link>
 
-### history
-- I graduated from App Academy (an intensive 1000+ hour bootcamp) in April 2021
-- I earned my MBA from the University of Redlands in 2019 and my BBA Walla Walla University in 2015
-- I have experience with leadership, project management, and
+### goals
+I'm searching for a diverse team to lend my skills to and learn new things from. I have a particular eye for design and a knack for identifying patterns and solving them systematicamlly. <Link to='/contact'>Contact me</Link>.
