added technologies page content

--- a/src/markdown-pages/technologies.mdx
+++ b/src/markdown-pages/technologies.mdx
@@ -1,5 +1,24 @@
-import FlexImages from '../components/FlexImages'
+import ReduxImg from "./images/technologies/redux.svg"
+import FlaskImg from "./images/technologies/flask.svg"
+import JavaScriptImg from "./images/technologies/javascript.svg"
+import PythonImg from "./images/technologies/python.svg"
 
-### technologies
+### Redux
+<a className='technologies__link' href=''>
+  <ReduxImg />
+</a><br />
 
-<FlexImages />
+### Flask
+<a className='technologies__link' href=''>
+  <FlaskImg />
+</a><br />
+
+### JavaScript
+<a className='technologies__link' href=''>
+  <JavaScriptImg />
+</a><br />
+
+### Python
+<a className='technologies__link' href=''>
+  <PythonImg />
+</a><br />
