--- a/src/markdown-pages/about.mdx
+++ b/src/markdown-pages/about.mdx
@@ -1,6 +1,6 @@
 import { Link } from 'gatsby'
 
-![](./images/headshot.png)
+![](images/me.png)
 
 ### bio
 I'm a full-stack software engineer who's profficient with JavaScript, Python, React.js, Redux, <Link to='/technologies'>and more</Link>. Ever since I taught myself SQL at my first job, I knew I had to keep finding harder problems to solve through code.
