added technologies page

--- a/src/markdown-pages/about.mdx
+++ b/src/markdown-pages/about.mdx
@@ -3,7 +3,7 @@ import { Link } from 'gatsby'
 ![](images/me.png)
 
 ### bio
-I'm a full-stack software engineer who's profficient with JavaScript, Python, React.js, Redux, <Link to='/technologies'>and more</Link>. Ever since I taught myself SQL at my first job, I knew I had to keep finding harder problems to solve through code.
+I'm a full-stack software engineer who's profficient with JavaScript, Python, React.js, Redux, <Link to='/technologies'>and more</Link>. Ever since I taught myself SQL at my first job, I knew I had to keep finding harder problems to solve through code. Check out <Link to='projects'>my work</Link>.
 
 ### background
 - Graduated from [App Academy](https://www.appacademy.io/) (an intensive 1000+ hour bootcamp) in April 2021
@@ -12,4 +12,4 @@ I'm a full-stack software engineer who's profficient with JavaScript, Python, Re
 - <Link to='/resume'>See more</Link>
 
 ### goals
-I'm searching for a diverse team to lend my skills to and learn new things from. I have a particular eye for design and a knack for identifying patterns and solving them systematicamlly. <Link to='/contact'>Contact me</Link>.
+I'm searching for a diverse team to lend my skills to and learn new things from. I have a particular eye for design and a knack for identifying patterns and solving them systematically. <Link to='/contact'>Get in touch</Link>.
