--- a/src/markdown-pages/resume.mdx
+++ b/src/markdown-pages/resume.mdx
@@ -1,1 +1,30 @@
-resume goes here
+import { Link } from 'gatsby'
+
+### Skills
+Leadership, personel management, working on a team, project management. Check out my technical skills <Link to='/technologies'>here</Link>.
+
+### Projects
+Learn more about my projects <Link to='/projects'>here</Link>.
+
+### Experience
+#### University of Redlands, Student Financial Services  /  Redlands CA  /  Feb 2017 - Oct 2019
+##### Operations & Support Director  /  Feb 2018 - Nov 2019
+- Reported to the Director to provide reporting services using SQL, technical support with SFS systems in coordination with IT, leadership on project implementation, and leadership while the director was absent
+- Managed and organized the technology and billing department in SFS consisting of a team of three employees
+
+##### Systems & Operations Specialist  /  Feb 2017 - Feb 2018
+- Promoted after one year to a director role; managed reporting, software testing, and process improvements
+
+#### Walla Walla University /  Walla Walla, WA  /  Feb 2015 - Jun 2016
+##### Interim Director of Institutional Research /  Feb 2016 - Feb 2017
+- Generated and formatted data with SQL for administration and for university reporting (IPEDS, CDS, etc.)
+
+##### Functional Analyst, Academic Records  /  Mar 2015 - July  2016
+- Maintained class schedule, facility reservations, and tuition and academic fee billing and auditing
+- Provided Registrar with data through SQL and data analysis
+- Organized and maintained department systems, software, and staff member programs
+
+### Education
+- App Academy  /  Nov 2020 - Apr 2021  /  San Francisco, CA  /  Immersive software development course focused on full stack web development
+- Master of Business Administration  /  University of Redlands  /  Dec 2019  /  Redlands, CA
+- Bachelor of Business Administration, Finance  /  Walla Walla University  /  Jun 2015  /  Walla Walla, WA
