--- a/src/markdown-pages/technologies.mdx
+++ b/src/markdown-pages/technologies.mdx
@@ -29,7 +29,7 @@ import NodejsImg from "./images/technologies/nodejs.svg"
 
 [Python](https://www.python.org/) is a programming language that lets you work more quickly and integrate your systems more effectively.
 
-### React
+### ReactJS
 <a className='technologies__link' href='https://reactjs.org/'>
   <RctImg />
 </a><br />
