--- a/src/markdown-pages/projects.mdx
+++ b/src/markdown-pages/projects.mdx
@@ -1,8 +1,8 @@
 ### Video Thirty One
-<br />
+[live site](https://pick-list.herokuapp.com) | [Github](https://github.com/breizeway/picklist)
 
 ### Feedly
-<br />
+[live site](https://reedly.herokuapp.com/) | [Github](https://github.com/breizeway/reedly)
 
 ### Shipcamp
-<br />
+[live site](https://ship-camp.herokuapp.com/) | [Github](https://github.com/breizeway/ship-camp)
