fixed local issues with build

--- a/src/markdown-pages/projects.mdx
+++ b/src/markdown-pages/projects.mdx
@@ -1,3 +1,7 @@
+---
+slug: projects
+---
+
 ### Video Thirty One
 [live site](https://pick-list.herokuapp.com) | [Github](https://github.com/breizeway/picklist)
 
