--- a/src/markdown-pages/technologies.mdx
+++ b/src/markdown-pages/technologies.mdx
@@ -1,3 +1,7 @@
+---
+slug: technologies
+---
+
 import JavaScriptImg from "./images/technologies/javascript.svg"
 import PythonImg from "./images/technologies/python.svg"
 import RctImg from "./images/technologies/rct.svg"
