--- a/src/markdown-pages/about.mdx
+++ b/src/markdown-pages/about.mdx
@@ -7,12 +7,12 @@ import { Link } from 'gatsby'
 ![](images/me.png)
 
 ### bio
-I'm a full-stack software engineer who's profficient with JavaScript, Python, React.js, Redux, <Link to='/technologies'>and more</Link>. Ever since I taught myself SQL at my first job, I knew I had to keep finding harder problems to solve through code. Check out <Link to='projects'>my work</Link>.
+I'm a full-stack software engineer who's proficient with JavaScript, Python, React.js, Redux, <Link to='/technologies'>and more</Link>. Ever since I taught myself SQL at my first job, I knew I had to keep finding harder problems to solve through code. Check out <Link to='/projects'>my work</Link>.
 
 ### background
 - Graduated from [App Academy](https://www.appacademy.io/) (an intensive 1000+ hour bootcamp) in April 2021
-- Have experience in leadership, project management, and data manipulation
-- Hold an MBA from the University of Redlands and a BBA from Walla Walla University
+- Experienced in leadership, project management, and data manipulation
+- Earned an MBA from the University of Redlands and a BBA from Walla Walla University
 - <Link to='/resume'>See more</Link>
 
 ### goals
