--- a/src/markdown-pages/contact.mdx
+++ b/src/markdown-pages/contact.mdx
@@ -8,6 +8,11 @@ mail@tannorbreitigam.com
 ### phone
 760-382-2925
 
-### letter
-PO Box 975<br/>
-Depoe Bay, OR 97341
+### Github
+[/breizeway](https://github.com/breizeway)
+
+### LinkedIn
+[/tannor](https://www.linkedin.com/in/tannor/)
+
+### AngelList
+[/tannor-breitigam](https://angel.co/u/tannor-breitigam)
