--- a/src/markdown-pages/technologies.mdx
+++ b/src/markdown-pages/technologies.mdx
@@ -2,6 +2,8 @@
 slug: technologies
 ---
 
+import { Link } from 'gatsby'
+
 import JavaScriptImg from "./images/technologies/javascript.svg"
 import PythonImg from "./images/technologies/python.svg"
 import RctImg from "./images/technologies/rct.svg"
@@ -18,6 +20,8 @@ import GatsbyImg from "./images/technologies/gatsby.svg"
 import HerokuImg from "./images/technologies/heroku.svg"
 import GitImg from "./images/technologies/git.svg"
 import NodejsImg from "./images/technologies/nodejs.svg"
+
+The following are technologies that I know well and have experience using. For examples of how I've used these technologies, take a look at <Link to='/projects'>my projects</Link>.
 
 ### JavaScript
 <a className='technologies__link' href='https://developer.mozilla.org/en-US/docs/Web/javascript'>
