--- a/src/markdown-pages/about.mdx
+++ b/src/markdown-pages/about.mdx
@@ -10,7 +10,7 @@ import { Link } from 'gatsby'
 I'm a full-stack software engineer who's proficient with JavaScript, Python, React.js, Redux, <Link to='/technologies'>and more</Link>. Ever since I taught myself SQL at my first job, I knew I had to keep finding harder problems to solve through code. Check out <Link to='/projects'>my work</Link>.
 
 ### background
-- Graduated from [App Academy](https://www.appacademy.io/) (an intensive 1000+ hour bootcamp) in April 2021
+- Graduated from [App Academy](https://www.appacademy.io/) (a rigorous 1000+ hour bootcamp with a < 4% acceptance rate) in April 2021
 - Experienced in leadership, project management, and data manipulation
 - Earned an MBA from the University of Redlands and a BBA from Walla Walla University
 - <Link to='/resume'>See more</Link>
