--- a/src/markdown-pages/projects.mdx
+++ b/src/markdown-pages/projects.mdx
@@ -2,11 +2,24 @@
 slug: projects
 ---
 
+import { Link } from 'gatsby'
+
 ### Video Thirty One
 [live site](https://pick-list.herokuapp.com) | [Github](https://github.com/breizeway/picklist)
 
-### Feedly
+Video Thirty One is a book club for films where friends create and follow curated collections of films they want to watch.
+
+### Reedly
 [live site](https://reedly.herokuapp.com/) | [Github](https://github.com/breizeway/reedly)
+
+Reedly is an RSS feed aggregator that enables users to browse articles from sites with RSS.
 
 ### Shipcamp
 [live site](https://ship-camp.herokuapp.com/) | [Github](https://github.com/breizeway/ship-camp)
+
+Shipcamp is a clone of Hipcamp that allows users to view and book campsites on ships.
+
+### My portfolio site
+<p><Link to='/about'>live site</Link> | <a href='https://github.com/breizeway/ship-camp'>GitHub</a></p>
+
+This is the site you're currently on!
