added graphQL query to identify slugs dynamically

--- a/src/markdown-pages/projects.mdx
+++ b/src/markdown-pages/projects.mdx
@@ -12,7 +12,7 @@ Video Thirty One is a book club for films where friends create and follow curate
 ### Reedly
 [live site](https://reedly.herokuapp.com/) | [Github](https://github.com/breizeway/reedly)
 
-Reedly is an RSS feed aggregator that enables users to browse articles from sites with RSS.
+Reedly is an RSS feed aggregator that enables users to browse articles from sites with RSS feeds.
 
 ### Shipcamp
 [live site](https://ship-camp.herokuapp.com/) | [Github](https://github.com/breizeway/ship-camp)
@@ -20,6 +20,6 @@ Reedly is an RSS feed aggregator that enables users to browse articles from site
 Shipcamp is a clone of Hipcamp that allows users to view and book campsites on ships.
 
 ### My portfolio site
-<p><Link to='/about'>live site</Link> | <a href='https://github.com/breizeway/ship-camp'>GitHub</a></p>
+<p><Link to='/about'>live site</Link> | <a href='https://github.com/breizeway/portfolio'>GitHub</a></p>
 
-This is the site you're currently on!
+The site you're currently on!
