updated about picture

--- a/src/markdown-pages/about.mdx
+++ b/src/markdown-pages/about.mdx
@@ -5,6 +5,7 @@ slug: about
 import { Link } from 'gatsby'
 
 ![](images/me.png)
+![](images/me.jpg)
 
 ### bio
 I'm a full-stack software engineer who's proficient with JavaScript, Python, React.js, Redux, <Link to='/technologies'>and more</Link>. Ever since I taught myself SQL at my first job, I knew I had to keep finding harder problems to solve through code. Check out <Link to='/projects'>my work</Link>.
