--- a/src/markdown-pages/resume.mdx
+++ b/src/markdown-pages/resume.mdx
@@ -15,11 +15,10 @@ Learn more about my projects <Link to='/projects'>here</Link>.
 Redlands CA | Feb 2017 - Oct 2019
 
 ##### Operations & Support Director | Feb 2018 - Nov 2019
-- Reported to the Director to provide reporting services using SQL, technical support with SFS systems in coordination with IT, leadership on project implementation, and leadership while the director was absent
-- Managed and organized the technology and billing department in SFS consisting of a team of three employees
+- Provided reporting services using SQL, technical support with SFS systems in coordination with IT, and leadership on project implementation and other functions
+- Managed and organized the technology and billing department in SFS leading a small team of employees to provide essential operational services in regards to University needs
 
-##### Systems & Operations Specialist
-Feb 2017 - Feb 2018
+##### Systems & Operations Specialist | Feb 2017 - Feb 2018
 - Promoted after one year to a director role; managed reporting, software testing, and process improvements
 
 #### Walla Walla University
@@ -30,10 +29,10 @@ Walla Walla, WA | Feb 2015 - Jun 2016
 
 ##### Functional Analyst, Academic Records | Mar 2015 - July  2016
 - Maintained class schedule, facility reservations, and tuition and academic fee billing and auditing
-- Provided Registrar with data through SQL and data analysis
-- Organized and maintained department systems, software, and staff member programs
+- Provided Registrar with data harvested through University databases using SQL queries and data analysis aggregating information in easy to understand reports and presentations
+- Maintained department systems and provided staff with essential software training and support
 
 ### Education
-- App Academy | Nov 2020 - Apr 2021 | San Francisco, CA | Immersive software development course focused on full stack web development
-- Master of Business Administration | University of Redlands | Dec 2019 | Redlands, CA
+- App Academy | Nov 2020 - Apr 2021 | San Francisco, CA | Immersive software development course focused on full stack-web development
+- Master of Business Administration, Finance | University of Redlands | Dec 2019 | Redlands, CA
 - Bachelor of Business Administration, Finance | Walla Walla University | Jun 2015  | Walla Walla, WA
