added contact form

--- a/src/markdown-pages/contact.mdx
+++ b/src/markdown-pages/contact.mdx
@@ -2,11 +2,10 @@
 slug: contact
 ---
 
-### email
-mail@tannorbreitigam.com
+import ContactForm from '../components/contact-form'
 
-### phone
-760-382-2925
+### email
+<ContactForm /><br />
 
 ### Github
 [/breizeway](https://github.com/breizeway)
