technologies page content update

--- a/src/markdown-pages/technologies.mdx
+++ b/src/markdown-pages/technologies.mdx
@@ -21,7 +21,7 @@ import HerokuImg from "./images/technologies/heroku.svg"
 import GitImg from "./images/technologies/git.svg"
 import NodejsImg from "./images/technologies/nodejs.svg"
 
-The following are technologies that I know well and have experience using. For examples of how I've used these technologies, take a look at <Link to='/projects'>my projects</Link>.
+These are technologies that I know well and have extensive experience using. For examples, take a look at <Link to='/projects'>my projects</Link>.
 
 ### JavaScript
 <a className='technologies__link' href='https://developer.mozilla.org/en-US/docs/Web/javascript'>
