--- a/src/markdown-pages/resume.mdx
+++ b/src/markdown-pages/resume.mdx
@@ -22,9 +22,9 @@ Redlands CA | Feb 2017 - Oct 2019
 - Promoted after one year to a director role; managed reporting, software testing, and process improvements
 
 #### Walla Walla University
-Walla Walla, WA | Feb 2015 - Jun 2016
+Walla Walla, WA | Feb 2015 - Jan 2017
 
-##### Interim Director of Institutional Research | Feb 2016 - Feb 2017
+##### Interim Director of Institutional Research | Feb 2016 - Jan 2017
 - Generated and formatted data with SQL for administration and for university reporting (IPEDS, CDS, etc.)
 
 ##### Functional Analyst, Academic Records | Mar 2015 - July  2016
@@ -33,6 +33,6 @@ Walla Walla, WA | Feb 2015 - Jun 2016
 - Maintained department systems and provided staff with essential software training and support
 
 ### Education
-- App Academy | Nov 2020 - Apr 2021 | San Francisco, CA | Immersive software development course focused on full stack-web development
-- Master of Business Administration, Finance | University of Redlands | Dec 2019 | Redlands, CA
-- Bachelor of Business Administration, Finance | Walla Walla University | Jun 2015  | Walla Walla, WA
+- **App Academy** | Nov 2020 - Apr 2021 | San Francisco, CA | Immersive software development course focused on full stack-web development
+- **Master of Business Administration**, Finance | University of Redlands | Dec 2019 | Redlands, CA
+- **Bachelor of Business Administration**, Finance | Walla Walla University | Jun 2015  | Walla Walla, WA
