--- a/src/markdown-pages/resume.mdx
+++ b/src/markdown-pages/resume.mdx
@@ -16,7 +16,7 @@ Redlands CA | Feb 2017 - Oct 2019
 
 ##### Operations & Support Director | Feb 2018 - Nov 2019
 - Provided reporting services using SQL, technical support with SFS systems in coordination with IT, and leadership on project implementation and other functions
-- Managed and organized the technology and billing department in SFS leading a small team of employees to provide essential operational services in regards to University needs
+- Managed and organized the technology and billing department in SFS, leading a small team of employees to provide essential operational services in regards to University needs
 
 ##### Systems & Operations Specialist | Feb 2017 - Feb 2018
 - Promoted after one year to a director role; managed reporting, software testing, and process improvements
