--- a/src/markdown-pages/resume.mdx
+++ b/src/markdown-pages/resume.mdx
@@ -5,7 +5,7 @@ slug: resume
 import { Link } from 'gatsby'
 
 ### Skills
-Check out my technical skills <Link to='/technologies'>here</Link>. My other skills include leadership, personel management, working on a team, and project management.
+Check out my technical skills <Link to='/technologies'>here</Link>. My other skills include leadership, personnel management, working on a team, and project management.
 
 ### Projects
 Learn more about my projects <Link to='/projects'>here</Link>.
