--- a/src/markdown-pages/contact.mdx
+++ b/src/markdown-pages/contact.mdx
@@ -5,7 +5,7 @@ slug: contact
 import ContactForm from '../components/contact-form'
 
 ### email
-<ContactForm /><br />
+<ContactForm />
 
 ### Github
 [/breizeway](https://github.com/breizeway)
