--- a/src/markdown-pages/technologies.mdx
+++ b/src/markdown-pages/technologies.mdx
@@ -15,8 +15,10 @@ import FlaskImg from "./images/technologies/flask.svg"
 import PostgresqlImg from "./images/technologies/postgresql.svg"
 import SequelizeImg from "./images/technologies/sequelize.svg"
 import SqlalchemyImg from "./images/technologies/sqlalchemy.svg"
+import GraphqlImg from "./images/technologies/graphql.svg"
 import DockerImg from "./images/technologies/docker.svg"
 import GatsbyImg from "./images/technologies/gatsby.svg"
+import AwsImg from "./images/technologies/aws.svg"
 import HerokuImg from "./images/technologies/heroku.svg"
 import GitImg from "./images/technologies/git.svg"
 import NodejsImg from "./images/technologies/nodejs.svg"
@@ -100,6 +102,13 @@ These are technologies that I know well and have extensive experience using. For
 
 [SQLAlchemy](https://www.sqlalchemy.org/) is the Python SQL toolkit and Object Relational Mapper that gives application developers the full power and flexibility of SQL.
 
+### GraphQL
+<a className='technologies__link' href='https://graphql.org/'>
+  <GraphqlImg />
+</a><br />
+
+[GraphQL](https://graphql.org/) is a query language for APIs and a runtime for fulfilling those queries with your existing data. GraphQL provides a complete and understandable description of the data in your API, gives clients the power to ask for exactly what they need and nothing more, makes it easier to evolve APIs over time, and enables powerful developer tools.
+
 ### Docker
 <a className='technologies__link' href='https://www.docker.com/'>
   <DockerImg />
@@ -113,6 +122,13 @@ These are technologies that I know well and have extensive experience using. For
 </a><br />
 
 [Gatsby](https://www.gatsbyjs.com/) provides development teams an open source frontend framework for creating rich, optimized websites and a cloud platform for delivering them on a blazing fast edge network.
+
+### AWS
+<a className='technologies__link' href='https://aws.amazon.com/'>
+  <AwsImg />
+</a><br />
+
+Amazon Web Services ([AWS](https://aws.amazon.com/)) is the world’s most comprehensive and broadly adopted cloud platform, offering over 200 fully featured services from data centers globally.
 
 ### Heroku
 <a className='technologies__link' href='https://www.heroku.com/what'>
