--- a/src/markdown-pages/contact.mdx
+++ b/src/markdown-pages/contact.mdx
@@ -14,4 +14,4 @@ import ContactForm from '../components/contact-form'
 [/tannor](https://www.linkedin.com/in/tannor/)
 
 ### AngelList
-[/tannor-breitigam](https://angel.co/u/tannor-breitigam)
+[/tannor](https://angel.co/u/tannor)
