--- a/src/markdown-pages/projects.mdx
+++ b/src/markdown-pages/projects.mdx
@@ -3,9 +3,9 @@ slug: projects
 ---
 
 import { Link, Image } from 'gatsby'
-import v31GIF from './images/projects/v31.gif'
+import v31GIF from './images/projects/v31-2.gif'
 import reedlyGIF from './images/projects/reedly.gif'
-import shipcampGIF from './images/projects/shipcamp.gif'
+import shipcampGIF from './images/projects/shipcamp-2.gif'
 
 ### Video Thirty One
 [live site](https://pick-list.herokuapp.com) | [Github](https://github.com/breizeway/picklist)
