added experience levels to technologies

--- a/src/markdown-pages/technologies.mdx
+++ b/src/markdown-pages/technologies.mdx
@@ -4,31 +4,35 @@ slug: technologies
 
 import { Link } from 'gatsby'
 
-import JavaScriptImg from "./images/technologies/javascript.svg"
-import PythonImg from "./images/technologies/python.svg"
-import RctImg from "./images/technologies/rct.svg"
-import ReduxImg from "./images/technologies/redux.svg"
-import HTML5Img from "./images/technologies/HTML5.svg"
-import CSS3Img from "./images/technologies/CSS3.svg"
-import ExpressImg from "./images/technologies/express.svg"
-import FlaskImg from "./images/technologies/flask.svg"
-import PostgresqlImg from "./images/technologies/postgresql.svg"
-import SequelizeImg from "./images/technologies/sequelize.svg"
-import SqlalchemyImg from "./images/technologies/sqlalchemy.svg"
-import GraphqlImg from "./images/technologies/graphql.svg"
-import DockerImg from "./images/technologies/docker.svg"
-import GatsbyImg from "./images/technologies/gatsby.svg"
-import AwsImg from "./images/technologies/aws.svg"
-import HerokuImg from "./images/technologies/heroku.svg"
-import GitImg from "./images/technologies/git.svg"
-import NodejsImg from "./images/technologies/nodejs.svg"
+import Experience from '../components/experience'
 
-These are technologies that I know well and have extensive experience using. For examples, take a look at <Link to='/projects'>my projects</Link>.
+import JavaScriptImg from './images/technologies/javascript.svg'
+import PythonImg from './images/technologies/python.svg'
+import RctImg from './images/technologies/rct.svg'
+import ReduxImg from './images/technologies/redux.svg'
+import HTML5Img from './images/technologies/HTML5.svg'
+import CSS3Img from './images/technologies/CSS3.svg'
+import GitImg from './images/technologies/git.svg'
+import NodejsImg from './images/technologies/nodejs.svg'
+import ExpressImg from './images/technologies/express.svg'
+import FlaskImg from './images/technologies/flask.svg'
+import PostgresqlImg from './images/technologies/postgresql.svg'
+import SequelizeImg from './images/technologies/sequelize.svg'
+import SqlalchemyImg from './images/technologies/sqlalchemy.svg'
+import GatsbyImg from './images/technologies/gatsby.svg'
+import HerokuImg from './images/technologies/heroku.svg'
+import GraphqlImg from './images/technologies/graphql.svg'
+import DockerImg from './images/technologies/docker.svg'
+import AwsImg from './images/technologies/aws.svg'
+
+These are technologies that experience using--some more than others. For details, keep scrolling. For examples, take a look at <Link to='/projects'>my projects</Link>.
 
 ### JavaScript
 <a className='technologies__link' href='https://developer.mozilla.org/en-US/docs/Web/javascript'>
   <JavaScriptImg />
 </a><br />
+
+<Experience level='proficient' />
 
 [JavaScript](https://developer.mozilla.org/en-US/docs/Web/javascript) is a lightweight, interpreted, or just-in-time compiled programming language with first-class functions.
 
@@ -37,12 +41,16 @@ These are technologies that I know well and have extensive experience using. For
   <PythonImg />
 </a><br />
 
+<Experience level='proficient' />
+
 [Python](https://www.python.org/) is a programming language that lets you work more quickly and integrate your systems more effectively.
 
 ### ReactJS
 <a className='technologies__link' href='https://reactjs.org/'>
   <RctImg />
 </a><br />
+
+<Experience level='proficient' />
 
 [React](https://reactjs.org/) makes it painless to create interactive UIs. Design simple views for each state in your application, and React will efficiently update and render just the right components when your data changes.
 
@@ -51,12 +59,16 @@ These are technologies that I know well and have extensive experience using. For
   <ReduxImg />
 </a><br />
 
+<Experience level='proficient' />
+
 [Redux](https://redux.js.org/) helps you write applications that behave consistently, run in different environments (client, server, and native), and are easy to test.
 
 ### HTML5
 <a className='technologies__link' href='https://developer.mozilla.org/en-US/docs/Web/CSS'>
   <HTML5Img />
 </a><br />
+
+<Experience level='proficient' />
 
 [HTML5](https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/HTML5) is the latest evolution of the standard that defines HTML. The term represents two different concepts. It is a new version of the language HTML, with new elements, attributes, and behaviors, and a larger set of technologies that allows the building of more diverse and powerful Web sites and applications.
 
@@ -65,82 +77,14 @@ These are technologies that I know well and have extensive experience using. For
   <CSS3Img />
 </a><br />
 
-[Cascading Style Sheets](https://developer.mozilla.org/en-US/docs/Web/CSS) (CSS) is a stylesheet language used to describe the presentation of a document written in HTML or XML. CSS describes how elements should be rendered on screen, on paper, in speech, or on other media.
-
-### Express
-<a className='technologies__link' href='https://expressjs.com/'>
-  <ExpressImg />
-</a><br />
-
-[Express](https://expressjs.com/) is a minimal and flexible Node.js web application framework that provides a robust set of features for web and mobile applications.
-
-### Flask
-<a className='technologies__link' href='https://palletsprojects.com/p/flask/'>
-  <FlaskImg />
-</a><br />
-
-[Flask](https://palletsprojects.com/p/flask/) is a lightweight WSGI web application framework. It is designed to make getting started quick and easy, with the ability to scale up to complex applications.
-
-### PostgreSQL
-<a className='technologies__link' href='https://www.postgresql.org/'>
-  <PostgresqlImg />
-</a><br />
-
-[PostgreSQL](https://www.postgresql.org/) is a powerful, open source object-relational database system with over 30 years of active development that has earned it a strong reputation for reliability, feature robustness, and performance.
-
-### Sequelize
-<a className='technologies__link' href='https://sequelize.org/'>
-  <SequelizeImg />
-</a><br />
-
-[Sequelize](https://sequelize.org/) is a promise-based Node.js ORM for Postgres, MySQL, MariaDB, SQLite and Microsoft SQL Server. It features solid transaction support, relations, eager and lazy loading, read replication and more.
-
-### SQLAlchemy
-<a className='technologies__link' href='https://www.sqlalchemy.org/'>
-  <SqlalchemyImg />
-</a><br />
-
-[SQLAlchemy](https://www.sqlalchemy.org/) is the Python SQL toolkit and Object Relational Mapper that gives application developers the full power and flexibility of SQL.
-
-### GraphQL
-<a className='technologies__link' href='https://graphql.org/'>
-  <GraphqlImg />
-</a><br />
-
-[GraphQL](https://graphql.org/) is a query language for APIs and a runtime for fulfilling those queries with your existing data. GraphQL provides a complete and understandable description of the data in your API, gives clients the power to ask for exactly what they need and nothing more, makes it easier to evolve APIs over time, and enables powerful developer tools.
-
-### Docker
-<a className='technologies__link' href='https://www.docker.com/'>
-  <DockerImg />
-</a><br />
-
-[Docker](https://www.docker.com/) takes away repetitive, mundane configuration tasks and is used throughout the development lifecycle for fast, easy and portable application development - desktop and cloud.
-
-### Gatsby
-<a className='technologies__link' href='https://www.gatsbyjs.com/'>
-  <GatsbyImg />
-</a><br />
-
-[Gatsby](https://www.gatsbyjs.com/) provides development teams an open source frontend framework for creating rich, optimized websites and a cloud platform for delivering them on a blazing fast edge network.
-
-### AWS
-<a className='technologies__link' href='https://aws.amazon.com/'>
-  <AwsImg />
-</a><br />
-
-Amazon Web Services ([AWS](https://aws.amazon.com/)) is the world’s most comprehensive and broadly adopted cloud platform, offering over 200 fully featured services from data centers globally.
-
-### Heroku
-<a className='technologies__link' href='https://www.heroku.com/what'>
-  <HerokuImg />
-</a><br />
-
-[Heroku](https://www.heroku.com/what) is a cloud platform that lets companies build, deliver, monitor and scale apps — we're the fastest way to go from idea to URL, bypassing all those infrastructure headaches.
+<Experience level='proficient' />
 
 ### Git
 <a className='technologies__link' href='https://git-scm.com/'>
   <GitImg />
 </a><br />
+
+<Experience level='proficient' />
 
 [Git](https://git-scm.com/) is a free and open source distributed version control system designed to handle everything from small to very large projects with speed and efficiency.
 
@@ -149,4 +93,98 @@ Amazon Web Services ([AWS](https://aws.amazon.com/)) is the world’s most compr
   <NodejsImg />
 </a><br />
 
+<Experience level='proficient' />
+
 [Node.js](https://nodejs.org/en/) is a JavaScript runtime built on Chrome's V8 JavaScript engine.
+
+[Cascading Style Sheets](https://developer.mozilla.org/en-US/docs/Web/CSS) (CSS) is a stylesheet language used to describe the presentation of a document written in HTML or XML. CSS describes how elements should be rendered on screen, on paper, in speech, or on other media.
+
+### Express
+<a className='technologies__link' href='https://expressjs.com/'>
+  <ExpressImg />
+</a><br />
+
+<Experience level='knowledgeable' />
+
+[Express](https://expressjs.com/) is a minimal and flexible Node.js web application framework that provides a robust set of features for web and mobile applications.
+
+### Flask
+<a className='technologies__link' href='https://palletsprojects.com/p/flask/'>
+  <FlaskImg />
+</a><br />
+
+<Experience level='knowledgeable' />
+
+[Flask](https://palletsprojects.com/p/flask/) is a lightweight WSGI web application framework. It is designed to make getting started quick and easy, with the ability to scale up to complex applications.
+
+### PostgreSQL
+<a className='technologies__link' href='https://www.postgresql.org/'>
+  <PostgresqlImg />
+</a><br />
+
+<Experience level='knowledgeable' />
+
+[PostgreSQL](https://www.postgresql.org/) is a powerful, open source object-relational database system with over 30 years of active development that has earned it a strong reputation for reliability, feature robustness, and performance.
+
+### Sequelize
+<a className='technologies__link' href='https://sequelize.org/'>
+  <SequelizeImg />
+</a><br />
+
+<Experience level='knowledgeable' />
+
+[Sequelize](https://sequelize.org/) is a promise-based Node.js ORM for Postgres, MySQL, MariaDB, SQLite and Microsoft SQL Server. It features solid transaction support, relations, eager and lazy loading, read replication and more.
+
+### SQLAlchemy
+<a className='technologies__link' href='https://www.sqlalchemy.org/'>
+  <SqlalchemyImg />
+</a><br />
+
+<Experience level='knowledgeable' />
+
+[SQLAlchemy](https://www.sqlalchemy.org/) is the Python SQL toolkit and Object Relational Mapper that gives application developers the full power and flexibility of SQL.
+
+### Gatsby
+<a className='technologies__link' href='https://www.gatsbyjs.com/'>
+  <GatsbyImg />
+</a><br />
+
+<Experience level='knowledgeable' />
+
+[Gatsby](https://www.gatsbyjs.com/) provides development teams an open source frontend framework for creating rich, optimized websites and a cloud platform for delivering them on a blazing fast edge network.
+
+### Heroku
+<a className='technologies__link' href='https://www.heroku.com/what'>
+  <HerokuImg />
+</a><br />
+
+<Experience level='knowledgeable' />
+
+[Heroku](https://www.heroku.com/what) is a cloud platform that lets companies build, deliver, monitor and scale apps — we're the fastest way to go from idea to URL, bypassing all those infrastructure headaches.
+
+### GraphQL
+<a className='technologies__link' href='https://graphql.org/'>
+  <GraphqlImg />
+</a><br />
+
+[GraphQL](https://graphql.org/) is a query language for APIs and a runtime for fulfilling those queries with your existing data. GraphQL provides a complete and understandable description of the data in your API, gives clients the power to ask for exactly what they need and nothing more, makes it easier to evolve APIs over time, and enables powerful developer tools.
+
+<Experience level='familiar' />
+
+### Docker
+<a className='technologies__link' href='https://www.docker.com/'>
+  <DockerImg />
+</a><br />
+
+[Docker](https://www.docker.com/) takes away repetitive, mundane configuration tasks and is used throughout the development lifecycle for fast, easy and portable application development - desktop and cloud.
+
+<Experience level='familiar' />
+
+### AWS
+<a className='technologies__link' href='https://aws.amazon.com/'>
+  <AwsImg />
+</a><br />
+
+<Experience level='familiar' />
+
+Amazon Web Services ([AWS](https://aws.amazon.com/)) is the world’s most comprehensive and broadly adopted cloud platform, offering over 200 fully featured services from data centers globally.
