--- a/src/markdown-pages/resume.mdx
+++ b/src/markdown-pages/resume.mdx
@@ -5,10 +5,10 @@ slug: resume
 import { Link } from 'gatsby'
 
 ### Skills
-Check out my technical skills <Link to='/technologies'>here</Link>. My other skills include leadership, personnel management, working on a team, and project management.
+Python, JavaScript, React.js, Redux, HTML5, CSS3, Express, Flask, PostgreSQL, Sequelize, SQLAlchemy, Docker, AWS, Gatsby, GraphQL, Heroku, Git, Node.js, Visual Studio Code, MacOS, Windows, Microsoft SQL Server, RESTful APIs, full-stack software development, object-oriented programming, application development, web development, project management, leadership, data harvesting, personnel management, and <Link to='/technologies'>more</Link>...
 
 ### Projects
-Learn more about my projects <Link to='/projects'>here</Link>.
+I have built several websites using modern web technologies and frameworks, both solo and as part of a team of developers. Learn more about these projects <Link to='/projects'>here</Link>.
 
 ### Experience
 #### University of Redlands, Student Financial Services
