--- a/src/markdown-pages/projects.mdx
+++ b/src/markdown-pages/projects.mdx
@@ -7,7 +7,7 @@ import { Link } from 'gatsby'
 ### Video Thirty One
 [live site](https://pick-list.herokuapp.com) | [Github](https://github.com/breizeway/picklist)
 
-![](images/projects/v31.png)
+![](images/projects/v31b.png)
 
 Video Thirty One is a book club for films where friends create and follow curated collections of films they want to watch.
 - Optimized load speed by building Redux state to first load database data then film API data only as needed and React to reduce repetitive code and increase render speed
