--- a/src/markdown-pages/about.mdx
+++ b/src/markdown-pages/about.mdx
@@ -4,7 +4,7 @@ slug: about
 
 import { Link } from 'gatsby'
 
-![](images/me-4.png)
+![black and white headshot of Tannor with a plain background](images/me-4.png "Tannor's Head Shot")
 
 ### bio
 I'm a full-stack software engineer who's proficient with JavaScript, Python, React.js, Redux, <Link to='/technologies'>and more</Link>. Ever since I taught myself SQL at my first job, I knew I had to keep finding harder problems to solve through code. Check out <Link to='/projects'>my work</Link>.
