--- a/src/markdown-pages/projects.mdx
+++ b/src/markdown-pages/projects.mdx
@@ -7,7 +7,7 @@ import { Link } from 'gatsby'
 ### Video Thirty One
 [live site](https://pick-list.herokuapp.com) | [Github](https://github.com/breizeway/picklist)
 
-![](images/projects/v31b.png)
+![Preview of the Video Thirty One website home page](images/projects/v31b.png "Video Thirty One Home Page")
 
 Video Thirty One is a book club for films where friends create and follow curated collections of films they want to watch.
 - Optimized load speed by building Redux state to first load database data then film API data only as needed and React to reduce repetitive code and increase render speed
@@ -17,7 +17,7 @@ Video Thirty One is a book club for films where friends create and follow curate
 ### Reedly
 [live site](https://reedly.herokuapp.com/) | [Github](https://github.com/breizeway/reedly)
 
-![](images/projects/reedly.png)
+![Preview of the Reedly website home page](images/projects/reedly.png "Reedly Home Page")
 
 Reedly is an RSS feed aggregator that enables users to browse articles from sites with RSS feeds.
 - Employed JavaScript with React and Redux on the front end and Python with Flask and SQLAlchemy on the back end to create a cohesive and fully functional feed aggregator
@@ -26,7 +26,7 @@ Reedly is an RSS feed aggregator that enables users to browse articles from site
 ### Shipcamp
 [live site](https://ship-camp.herokuapp.com/) | [Github](https://github.com/breizeway/ship-camp)
 
-![](images/projects/shipcamp.png)
+![Preview of the Shipcamp website home page](images/projects/shipcamp.png "Shipcamp Home Page")
 
 Shipcamp is a clone of Hipcamp that allows users to view and book campsites on ships.
 - Applied JavaScript with React and Redux on the front end and Express and Sequelize on the back end
