--- a/src/markdown-pages/about.mdx
+++ b/src/markdown-pages/about.mdx
@@ -13,7 +13,5 @@ I'm a full-stack software engineer who's proficient with JavaScript, Python, Rea
 - Graduated from [App Academy](https://www.appacademy.io/) (a rigorous 1000+ hour bootcamp with a < 4% acceptance rate) in April 2021
 - Experienced in leadership, project management, and data manipulation
 - Earned an MBA from the University of Redlands and a BBA from Walla Walla University
-- <Link to='/resume'>See more</Link>
 
-### goals
-I'm searching for a diverse team to lend my skills to and learn new things from. I have a particular eye for design and a knack for identifying patterns and solving them systematically. <Link to='/contact'>Get in touch</Link>.
+<Link to='/resume'>Read more about my work</Link> or <Links to='/contact'>get in touch</Link>.
