--- a/src/markdown-pages/about.mdx
+++ b/src/markdown-pages/about.mdx
@@ -14,4 +14,4 @@ I'm a full-stack software engineer who's proficient with JavaScript, Python, Rea
 - Experienced in leadership, project management, and data manipulation
 - Earned an MBA from the University of Redlands and a BBA from Walla Walla University
 
-<Link to='/resume'>Read more about my work</Link> or <Links to='/contact'>get in touch</Link>.
+<Link to='/resume'>Explore my background</Link> or <Links to='/contact'>get in touch</Link>.
